; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/host/extr_bcma-hcd.c_bcma_hci_platform_power_gpio.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/host/extr_bcma-hcd.c_bcma_hci_platform_power_gpio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bcma_device = type { i32 }
%struct.bcma_hcd_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bcma_device*, i32)* @bcma_hci_platform_power_gpio to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bcma_hci_platform_power_gpio(%struct.bcma_device* %0, i32 %1) #0 {
  %3 = alloca %struct.bcma_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.bcma_hcd_device*, align 8
  store %struct.bcma_device* %0, %struct.bcma_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.bcma_device*, %struct.bcma_device** %3, align 8
  %7 = call %struct.bcma_hcd_device* @bcma_get_drvdata(%struct.bcma_device* %6)
  store %struct.bcma_hcd_device* %7, %struct.bcma_hcd_device** %5, align 8
  %8 = load %struct.bcma_hcd_device*, %struct.bcma_hcd_device** %5, align 8
  %9 = getelementptr inbounds %struct.bcma_hcd_device, %struct.bcma_hcd_device* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i64 @IS_ERR_OR_NULL(i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  br label %20

14:                                               ; preds = %2
  %15 = load %struct.bcma_hcd_device*, %struct.bcma_hcd_device** %5, align 8
  %16 = getelementptr inbounds %struct.bcma_hcd_device, %struct.bcma_hcd_device* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @gpiod_set_value(i32 %17, i32 %18)
  br label %20

20:                                               ; preds = %14, %13
  ret void
}

declare dso_local %struct.bcma_hcd_device* @bcma_get_drvdata(%struct.bcma_device*) #1

declare dso_local i64 @IS_ERR_OR_NULL(i32) #1

declare dso_local i32 @gpiod_set_value(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
